--- a/Newproject/Newproject.vcxproj.filters
+++ b/Newproject/Newproject.vcxproj.filters
@@ -29,9 +29,20 @@
     <ClInclude Include="src\Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shader.frag" />
     <None Include="src\shader.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\Downloads\power.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="src\power.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
